# XPLR-IOT-1-location-example

./: .gitignore  README.md
celllocate-wifi-example/: CMakeLists.txt  README.md  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
celllocate-wifi-example/src/: main.c  module_config.c  module_config.h
cloudlocate-example/: CMakeLists.txt  README.md  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
cloudlocate-example/src/: main.c  module_config.c  module_config.h
image_flashing/: README.md  Update_XPLR-IOT-1-Location.bat
image_flashing/newtmgr_license_info/: README.md
ubxlib/cell/src/: u_cell_loc.c
ubxlib/gnss/src/: u_gnss_private.c
ubxlib/port/platform/nrf5sdk/mcu/nrf52/cfg/: user_mbedtls_config.h
ubxlib/port/platform/zephyr/cfg/: u_cfg_app_platform_specific.h
ubxlib_priv/gnss/api/: u_gnss_cfg_val_key.h  u_gnss_module_type.h
